project card text alignment fix

--- a/src/components/Styles/projectcard.css
+++ b/src/components/Styles/projectcard.css
@@ -25,6 +25,10 @@
     padding: 10px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
   
   .proj-txtx h4 {
@@ -32,7 +36,7 @@
     margin: 0;
   }
   
-  .proj-txtx span {
+  .proj-txtx div {
     font-size: 14px;
   }
   
